src/objects/AF_Comments__c.object
<CustomObject>
    <description>Will capture all comments posted by users and will allow reporting on these comments to be possible</description>
    <fields>
        <fullName>AF_Agency_Estimate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To relate Comments to Agency estimates.</description>
        <label>Agency Estimate</label>
        <referenceTo>AF_Agency_Estimate__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bonus Summary</label>
        <referenceTo>AF_Bonus_Summary__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Bonus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To relate comments to Bonus Matrix.</description>
        <label>Bonus</label>
        <referenceTo>AF_Bonus_Matrix__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Brand_Estimate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To relate comments to brand estimates.</description>
        <label>Brand Estimate</label>
        <referenceTo>AF_Brand_Estimate__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Comments__c</fullName>
        <description>AgencyFee#GLOBAL#To enter the comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AF_OOPS_Actual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates comments to OOps Actual</description>
        <label>OOPS Actual</label>
        <referenceTo>AF_OOPS_Actual__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_OOPS_Estimate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To relate comments with OOPs estimates.</description>
        <label>OOPS Estimate</label>
        <referenceTo>AF_OOPS_Estimate__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Parent_Object_Type__c</fullName>
        <description>A literal value to allow us to perform casting in APEX to the object type the comment relates. This is not suited to being a pick list.</description>
        <label>AF_Parent_Object_Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Parent_Record_Id__c</fullName>
        <description>The parent record the comment belongs to.</description>
        <label>AF_Parent_Record_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Public__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Used to show Comments to Both Internal and External Users
Unchecked - Comments only shown to Internal</inlineHelpText>
        <label>AF_Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Type__c</fullName>
        <description>AgencyFee#GLOBAL#To Store type.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerName</label>
        <type>Text</type>
    </fields>
    <label>Comments</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>